--- a/calculator.html
+++ b/calculator.html
@@ -16,7 +16,7 @@
 <form id="frm">
 	<h2 style="margin: 2px;">WEB CALCULATOR</h2>
 	<input id="answe" type="box" readonly="readonly" name="answe" value="">
-	<input id="txt" type="textbox" readonly="readonly" name="txt"><br>
+	<input id="txt" type="textbox"  name="txt"><br>
 	<input class="btna" type="button" name="btnf" value="x!" onclick="fact()">
 	<input class="btna" type="button" name="btnr" value="&radic;" onclick="sqrt()">
 	<input class="btnc" type="button" name="bcks" value="&larr;" onclick="bck()">
